# ncnn_sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt  onnx_to_ncnn_ex.bash  useful_links
config/: CMakeLists.txt  config.hpp.in
ncnn/: howto
onnx/: conv_h5_to_onnx.py  conv_pth_to_onnx.py
pytorch/fashion_MNIST/: NN_def.py  main.py  test_single.py
res/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
static_res/imgs/: test1_dbg.txt
static_res/ncnnModels/: fashion_MNIST_model.param
static_res/onnxModels/: fashion_MNIST_model.onnx
static_res/pthModels/: fashion_MNIST_model.pth
static_res/tf2Models/: basic_img_classifier64x64_model.h5
tf2/: build_model.py
